Got the scroll animations to work! ✨🙏✨ Fixed it by changing out the overflow-x: hidden css rule on nav and style.css. Managed to make a few adjustments to contact-form, config still needs to be modified locally.

--- a/public_html/css/nav.css
+++ b/public_html/css/nav.css
@@ -548,7 +548,6 @@ a:focus {
 @media screen and (max-width: 55em) {
 	html,
 	body {
-		overflow-x: hidden;
 		width: 100vw;
 		height: 100%;
 	}
